[package]
name = "cee_cee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3.3"
serde_json = {version = "1.0"}
structopt = "0.3"
base64 = "0.13.0"
clap = "3.0.0-beta.4"
colored = "2.0.0"
dialoguer = "0.9.0"